Preparing for PDF support

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -254,6 +254,7 @@
       "ScanTheQrCodeOrOpen": "Scan the QR Code or Open",
       "Title": "ChartFox"
     },
+    "PdfUnsupported": "PDF charts are currently not supported",
     "PinnedCharts": {
       "Delete": "Delete",
       "Edit": "Edit",
