--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -85,12 +85,12 @@
       "Route": "Route",
       "SimBriefDataNotYetLoaded": "SimBrief data not yet loaded.",
       "Title": "Your Flight",
-      "ZFW": "ZFW"
+      "ZFW": "ZFW",
+      "NoImportDueToBoardingOrRefuel": "No import possible due to boarding or refuel in progress!"
     }
   },
   "Dispatch": {
     "Ofp": {
-      "ImportSimBriefData": "Import SimBrief Data",
       "TT": {
         "IncreaseFontSize": "Increase Font Size",
         "ReduceFontSize": "Reduce Font Size"
