--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -377,6 +377,7 @@
       "ColdDark": "Cold & Dark",
       "ConfirmationDialogMsg": "Please confirm loading of preset.",
       "CurrentProcedureStep": "Current Procedure Step",
+      "ExpediteLoading": "Fast loading (unrealistic):",
       "PleaseConfirmLoadingOfPreset": "Please confirm loading of preset.",
       "Powered": "Powered",
       "ReadyPushback": "Ready for Pushback",
