feat(EFB/SimBrief): Automatically import SimBrief Fuel & Payload (2nd Attempt) (#8470)
* auto-import-via-EFB

* Moving Auto-Import SB out of EFB

* Improving Name, Location and Text of new Labels

* Changed Labels

* Removed extra Option - Fuel and Payload import tied to autoSimbriefImport

* Untied Fuel & Payload import from autoSimbriefImport (for manual Import)

* Fixing auto-import

* Moar fixing

* lost in non-translation

* fix merge

* Merge-Prep for new Fuel Pages

* Merge master

* needed change for merge

* fixed up Simbrief parsing, imported values wont be applied during fueling or boarding

* Generally made sure all inputs are disabled properly on fuel and payload page when in progress.

Removed the import button on the OFP page since it was redundant.

Refactored the Dashboard widget to remove the need for two different button components

Made sure simbrief import only happens when no boarding or refueling is happening

* removed TODOs

* renamed and removed some vars

---------

Co-authored-by: Chaoz <maximilian.a.reuter@gmail.com>

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -81,15 +81,16 @@
       "CostIndex": "Cost Index",
       "CruiseAlt": "Cruise Alt.",
       "ImportSimBriefData": "Import SimBrief Data",
+      "ToastFuelPayloadImported": "Fuel & Payload imported!",
       "Route": "Route",
       "SimBriefDataNotYetLoaded": "SimBrief data not yet loaded.",
       "Title": "Your Flight",
-      "ZFW": "ZFW"
+      "ZFW": "ZFW",
+      "NoImportDueToBoardingOrRefuel": "No import possible due to boarding or refuel in progress!"
     }
   },
   "Dispatch": {
     "Ofp": {
-      "ImportSimBriefData": "Import SimBrief Data",
       "TT": {
         "IncreaseFontSize": "Increase Font Size",
         "ReduceFontSize": "Reduce Font Size"
