refactor: main/upper deck selector overhaul with redux

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -164,6 +164,11 @@
       "LoadingTime": "Loading Time",
       "Passengers": "Passengers",
       "Planned": "Planned",
+      "SelectItem": {
+        "MainDeck": "Main",
+        "UpperDeck": "Upper",
+        "CargoDeck": "Cargo"
+      },
       "TT": {
         "AircraftMustBeColdAndDarkToChangeBoardingTimes": "Aircraft Must Be On the Ground and Have Engines Shutdown to Change Boarding Duration",
         "FillPayloadFromSimbrief": "Fill Payload Information from Simbrief",
