--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -87,7 +87,7 @@
       "Title": "Your Flight",
       "ZFW": "ZFW",
       "NoImportDueToBoardingOrRefuel": "No import possible due to boarding or refuel in progress!",
-      "ToastWrongAircraftType": "Simbrief - Invalid aircraft type detected. Check that aircraft type in Simbrief OFP is correct."
+      "ToastWrongAircraftType": "SimBrief - Invalid aircraft type detected. Check that aircraft type in SimBrief OFP is correct."
     }
   },
   "Dispatch": {
