--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -86,7 +86,8 @@
       "SimBriefDataNotYetLoaded": "SimBrief data not yet loaded.",
       "Title": "Your Flight",
       "ZFW": "ZFW",
-      "NoImportDueToBoardingOrRefuel": "No import possible due to boarding or refuel in progress!"
+      "NoImportDueToBoardingOrRefuel": "No import possible due to boarding or refuel in progress!",
+      "ToastWrongAircraftType": "SimBrief - Invalid aircraft type detected. Check that aircraft type in SimBrief OFP is correct."
     }
   },
   "Dispatch": {
