feat/refactor: pause at tod and simrate controller in quick settings

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -476,6 +476,10 @@
     "SimBridgeConnecting": "Connecting...",
     "SimBridgeOff": "Off",
     "SimBridgeOffline": "Not Available",
+    "Simrate": "Simrate",
+    "PauseAtTod": "Pause at Top of Descent",
+    "PauseAtTodArmed": "Armed",
+    "PauseAtTodInactive": "Inactive",
     "TT": {
       "AlignAdirs": "Instantly align ADIRS",
       "AutoBrightness": "Turn Auto Brightness On/Off",
@@ -485,6 +489,8 @@
       "PowerButton": "Power Off",
       "Settings": "Go to flyPad Settings page",
       "SimBridge": "Control SimBridge Connection",
+      "PauseAtTod": "Arm or Disarm pause at Top of Descent",
+      "Simrate": "Increase or Decrease Simulation Rate",
       "Sleep": "Standby"
     },
     "Title": "Quick Controls"
