refactor: first draft tod changes

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -479,6 +479,7 @@
     "Simrate": "Simrate",
     "PauseAtTod": "Pause at Top of Descent",
     "PauseAtTodArmed": "Armed",
+    "PauseAtTodStandby": "Standby",
     "PauseAtTodInactive": "Inactive",
     "TT": {
       "AlignAdirs": "Instantly align ADIRS",
