feat(efb): Simrate and Pause at T/D in EFB Quick Settings (#8641)
* feat: display simrate in status bar

* feat/refactor: pause at tod and simrate controller in quick settings

* fix: css

* chore: rename elements

* revert: use current bg-fill styling

* refactor: first draft tod changes

* refactor: pause at tod armed indicator simvar

* refactor: use LocalSimVar

* refactor: NXDataStore.getAndSubscribe

* revert: package.json

* fix: use getVar for checking armed status + small refactor

---------

Co-authored-by: Saschl <sascharudolf46@gmail.com>
Co-authored-by: Saschl <19493808+Saschl@users.noreply.github.com>
Co-authored-by: alepouna <98479040+alepouna@users.noreply.github.com>

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -546,6 +546,11 @@
     "SimBridgeConnecting": "Connecting...",
     "SimBridgeOff": "Off",
     "SimBridgeOffline": "Not Available",
+    "Simrate": "Simrate",
+    "PauseAtTod": "Pause at Top of Descent",
+    "PauseAtTodArmed": "Armed",
+    "PauseAtTodStandby": "Standby",
+    "PauseAtTodInactive": "Inactive",
     "TT": {
       "AlignAdirs": "Instantly align ADIRS",
       "AutoBrightness": "Turn Auto Brightness On/Off",
@@ -555,6 +560,8 @@
       "PowerButton": "Power Off",
       "Settings": "Go to flyPad Settings page",
       "SimBridge": "Control SimBridge Connection",
+      "PauseAtTod": "Arm or Disarm pause at Top of Descent",
+      "Simrate": "Increase or Decrease Simulation Rate",
       "Sleep": "Standby"
     },
     "Title": "Quick Controls"
