remove currentFuel Tab & fix handleFuel

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/fr.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/fr.json
@@ -722,9 +722,6 @@
   "HandleFuel": {
     "Title": "Gestion du carburant",
     "Fuel": "Carburant",
-    "CurrentFuel": {
-      "Title": "Carburant actuel",
-      "CurrentFuel": "Carburant actuel :"
-    }
+    "CurrentFuelIs": "Le carburant acutel de l'avion est de : "
   }
 }
