feat: make pilot seat configurable
It also no longer updates when outside the flightdeck in auto.

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -658,9 +658,12 @@
       "ExternalMcduServerPort": "External MCDU Server Port",
       "Hpa": "hPa",
       "Inactive": "Inactive",
+      "Left": "Left",
       "LoadOnly": "Load Only",
       "None": "None",
       "Off": "Off",
+      "PilotSeat": "Pilot Seat for Control",
+      "Right": "Right",
       "Save": "Save",
       "Side": "Side",
       "SimBridgeIp": "External SimBridge Host Address",
