feat(efb/fdr): added option to enable/disable FDR in EFB

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -669,6 +669,7 @@
       "ThrottleDetents": "Throttle Detents",
       "Title": "Sim Options",
       "UseCalculatedIlsSignals": "Use Calculated ILS Signals",
+      "FdrEnabled": "Enable Flight Data Recorder (FDR)",
       "WheelChocksEnabled": "Wheel Chocks",
       "inHg": "inHg",
       "SimbridgeMachine": "Simbridge Host Machine",
