option to disable pushback conflict warning

--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -749,7 +749,8 @@
       "TwelveHours": "12h",
       "TwentyFourHours": "24h",
       "Utc": "UTC",
-      "UtcAndLocal": "UTC and Local"
+      "UtcAndLocal": "UTC and Local",
+      "DisablePushbackConflictWarning": "Disable pushpack system conflict warning"
     }
   },
   "StatusBar": {
