--- a/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
+++ b/fbw-common/src/systems/instruments/src/EFB/Localization/data/en.json
@@ -750,7 +750,7 @@
       "TwentyFourHours": "24h",
       "Utc": "UTC",
       "UtcAndLocal": "UTC and Local",
-      "DisablePushbackConflictWarning": "Disable pushpack system conflict warning"
+      "DisablePushbackConflictWarning": "Disable pushback system conflict warning"
     }
   },
   "StatusBar": {
